# moodcoco

./: .env.example  .gitignore  .migration_env  CLAUDE.md  README.md  pyproject.toml  visual-companion.html
.claude/: openclaw.json  settings.json
.evolve/: SHIP_REPORT.md  _b_doubao_ab_prompt.md  _b_round10_prompt.md  _b_round1_prompt.md  _b_round4_prompt.md  _b_round5_prompt.md  _b_round7_prompt.md  _doubao_ab.py  _evaluate.py  _round1_driver.py  adapter.py  e2e_test_report_v2.md  eval.yml  eval_codex.md  eval_codex_v6.md  eval_codex_v7.md  eval_codex_v8.md  eval_codex_v9.md  eval_s1.yml  lock  personas  program.md  results.tsv  round10_summary.json  round1_summary.json  round2_summary.json  round3_summary.json  round4_summary.json  round5_summary.json  round6_summary.json  round8_summary.json  round9_summary.json  run_e2e.sh  spec.md  strategy.md
.evolve/b_output/: S1_raw.json  (+19 more)
ai-companion/: AGENTS.md  FORMAT_MINIPROGRAM.md  FORMAT_TEXT.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md
backend/: README.md  __init__.py  api.py  chat.py  coordinator.py  fast.py  llm_provider.py  persona.py  slow.py
docs/: AGENTS-FULL.md  PM-HANDOFF.md  README.md  compaction-config.md  group-setup.md  memory-setup.md  needs-analysis.md  openclaw-anatomy.md  openclaw-capabilities.md  prd.md  product-architecture.md  product-context.md  product-experience-design.md  relationship-intelligence-upgrade.md  session-isolation.md  tech-capabilities.md  technical-design.md  voice-2.0-handoff.md  voice-evolve-r5-handoff.md  voice-impl-plan.md  团队成员.md
eval-reference/: README.md  adapter.py  eval.yml  spec.md
evolve/: 10-methods.md  report.md  迭代过程复盘.md
kaoyan-companion/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
tests/: .journey_state.json  conftest.py  journey_helpers.py  test_api_endpoints_e2e.py  test_archive_manager.py  test_content_type_consistency.py  test_e2e_openclaw_pipeline.py  test_f10_transition.py  test_growth_tracker.py  test_journey_p1_stranger.py  test_journey_p2_acquaintance.py  test_journey_p3a_course.py  test_journey_p3b_pattern.py  test_journey_p4a_cross_pattern.py  test_journey_p4b_me_page.py  test_journey_p4c_farewell.py  test_pattern_engine.py  test_tool_bridge_e2e.py  test_weekly_review.py
web/: package-lock.json  package.json
(+768 files in other folders)
