# ============================================================
# Project — moodcoco 快慢思考 MVP
# ============================================================
[project]
name = "moodcoco"
version = "0.1.0"
description = "moodcoco — 快慢思考对话架构 MVP（PydanticAI）"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
voice = [
    "livekit-agents>=1.0",
    "livekit-api>=1.0",
]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ============================================================
# Ruff — lint + 格式化
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle 错误
    "W",     # pycodestyle 警告
    "F",     # Pyflakes
    "I",     # isort（import 排序）
    "B",     # flake8-bugbear（常见 bug）
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade（自动升级旧语法）
    "SIM",   # flake8-simplify
    "TC",    # 把仅用于类型标注的 import 移到 TYPE_CHECKING 块
    "RET",   # return 语句问题
    "PTH",   # 用 pathlib 替代 os.path
    "RUF",   # Ruff 专属规则
]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]  # 中文全角标点是正常的
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ============================================================
# Pyright — 类型检查
# ============================================================
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["backend"]
exclude = ["**/__pycache__", ".venv", ".evolve", ".claude"]
reportMissingTypeStubs = false

# ============================================================
# pytest — 测试
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-q"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
